# sb-bsu-perepodgotovka-pois

./: .gitignore  LICENSE
oaip/Consolegram/: CMakeLists.txt  ConsoleGram.sln  ConsoleGram.sln.DotSettings  Consolegram.sln  Consolegram.sln.DotSettings  README.md  main.cpp
oaip/Task.4.1.3/: CMakeLists.txt  main.cpp  Ве_крест_крест.h
oaip/Task3.4/: CMakeLists.txt  main.cpp
oaip/Task3.5_1/: CMakeLists.txt  main.cpp
oaip/Task3.5_2/: CMakeLists.txt  main.cpp
oaip/Task4.1.4/: CMakeLists.txt  main.cpp
oaip/Task4.3.2/: CMakeLists.txt  main.cpp
oaip/Task4.3.3/: CMakeLists.txt  main.cpp
oaip/Task5.2.1/: CMakeLists.txt  main.cpp
oaip/Task5.2.2/: CMakeLists.txt  main.cpp
oaip/Task5.2.3/: CMakeLists.txt  main.cpp
oaip/Task5.2.4/: CMakeLists.txt  main.cpp
oaip/Task5.6.1/: CMakeLists.txt  main.cpp
oaip/Task5.6.2/: CMakeLists.txt  main.cpp
oaip/Task5.6.3/: CMakeLists.txt  main.cpp
oaip/Task5.6.4/: CMakeLists.txt  main.cpp
oipdb/Music/: .gitignore  Music.sln
svpp/Lab1/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
svpp/Lab2/: App.xaml.cs  MainWindow.xaml
svpp/Lab3_1/: App.xaml  App.xaml.cs  Lab3_1.sln  MainWindow.xaml  MainWindow.xaml.cs
svpp/Lab3_2/: App.xaml.cs  Lab3_2.sln  MainWindow.xaml  MainWindow.xaml.cs
svpp/Lab4_1/: App.xaml  App.xaml.cs  DrawingViewModel.cs  Lab4_1.sln  MainWindow.xaml  MainWindow.xaml.cs
tkp/: .gitignore
tkp/pz-2/: pz-2.sln
tkp/pz-3/: pz-3.sln
tkp/pz-5/: pz-5.sln
tkp/pz-6/: pz-6.sln
tkp/pz-7-2/: pz-7.sln
tkp/pz-8/: pz-8.sln
tkp/pz-8-3/: pz-8-3.sln
tkp/pz-9/: pz-9.sln
web/js/: 1.js  2.js  (+3 more)
(+387 files in other folders)
